# mnc-AI-multi-agent

./: .gitignore  CLAUDE.md  README.md
.agents-dev/roles/: debater-claude.md  debater-codex.md  debater-gemini.md
.agents-dev/scripts/: ask-codex.sh  ask-gemini.sh  dashboard-tui  dashboard-web  dashboard.sh  dashboard_tui.py  debate-codex.sh  debate-gemini.sh  multi-debate-auto.sh  multi-debate.sh  team-layout.sh
.agents-dev/tmux/: keybinding.conf  keybinding.conf.template
.agents-dev/web/: server.py
.agents-dev/web/static/: dashboard.js  index.html  style.css
.claude/: settings.json  settings.local.json
.serena/: project.yml
backend/: .env.example  pyproject.toml  test_server.py
backend/app/: config.py  main.py  orchestrator.py  prompts.py  schemas.py  sse.py
backend/app/agents/: base.py  claude_expert.py  gemini_expert.py  generic_expert.py  gpt_expert.py  judge.py
backend/tests/: test_orchestrator.py  test_schemas.py  test_sse.py
docs/: fix-gemini-streaming.md  multi-agent-orchestration.md  parenting-adolescent-son-debate.md  parenting-adolescent-son.md  samsung-bracket-strategy-2026.md
frontend/: package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: ExpertStream.tsx  HistoryPanel.tsx  JudgmentPanel.tsx  QuestionForm.tsx  RoundHeader.tsx
frontend/lib/: history.ts  markdown.ts  sse-client.ts  types.ts
